--- a/.github/workflows/arm64-release.yml
+++ b/.github/workflows/arm64-release.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Check Disk Space
+        run: df -h  # Linux/macOS
       - name: Pull Docker Images and Package
         run: |
           images="${{ github.event.inputs.docker_images }}"
