--- a/.github/workflows/arm64-release.yml
+++ b/.github/workflows/arm64-release.yml
@@ -15,7 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Check Disk Space
-        run: df -h  && ls -l
+        run: |
+          df -h 
+          ls -l
+          docker images 
+          docker rmi -f $(docker images |awk '{print $3}')
       - name: Pull Docker Images and Package
         run: |
           images="${{ github.event.inputs.docker_images }}"
@@ -26,6 +30,7 @@ jobs:
             image_name="${image_name//:/_}"
             docker save "${image}" -o "${image_name}-arm64.tar"
             gzip -c "${image_name}-arm64.tar" > "${image_name}-arm64.tar.gz"
+            docker rmi -f "$image"
             rm "${image_name}-arm64.tar"
           done
 
